fixed padding top so text is not hidden by navbar

--- a/docs/style.css
+++ b/docs/style.css
@@ -26,6 +26,7 @@ main {
     padding: 10px;
     text-align: center;
     align-self: center;
+    padding-top: 50px;
 }
 
 .textBox {
